--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -5,8 +5,11 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.1",
+    "dotenv": "^16.4.5",
     "hono": "^4.6.3",
-    "shared": "^0.2.0"
+    "mongodb": "^6.9.0",
+    "shared": "^0.2.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
