--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -8,7 +8,7 @@
     "dotenv": "^16.4.5",
     "hono": "^4.6.3",
     "mongodb": "^6.9.0",
-    "shared": "^0.2.0",
+    "shared": "workspace:*",
     "zod": "^3.23.8"
   },
   "devDependencies": {
