--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,9 +10,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^2.1.1",
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@hookform/resolvers": "^3.9.0",
+    "@refinedev/core": "^4.54.1",
+    "@refinedev/react-hook-form": "^4.9.0",
+    "@refinedev/simple-rest": "^5.0.8",
+    "@uiw/react-md-editor": "^4.0.4",
+    "framer-motion": "^11.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "shared": "^0.2.0"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.26.2",
+    "shared": "workspace:*",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
