--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,7 +1,8 @@
 {
   "name": "api",
   "scripts": {
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "lint": "biome check --write ./src"
   },
   "dependencies": {
     "@hono/node-server": "^1.13.1",
@@ -12,7 +13,9 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.2",
     "@types/node": "^20.11.17",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "tsx": "^4.7.1"
   }
 }
